# JuliaSet

./: .gitignore  CMakeLists.txt  README.md  cpu.cpp  gpu.cpp  main.cpp  shader.cpp  shader.hpp
.cache/clangd/index/: main.cpp.DBADBD79B30F28D9.idx  shader.cpp.D15D999D347141F7.idx  shader.hpp.5EB01C5B1D97D49C.idx
shader/: gpu_fragment.glsl  gpu_fragment_tmp.glsl  gpu_vertex.glsl  gpu_vertex_tmp.glsl  vertex.glsl
